--- a/html/introduce.html
+++ b/html/introduce.html
@@ -28,16 +28,49 @@
         </section>
         <hr />
         <section>
-            <h2>좋아하는 사진</h2>
-            <img src="./123.jpg" alt="고양이"/>
-            <p>제가 이 사진을 좋아하는 이유는... <strong>귀엽기 때문입니다...</strong></p>
+            <h2 class="right">제가 좋아하는 사진입니다</h2>
+            <div id="image">
+                <div class="imagewhithcaption">
+                    <div id="favoriteimage">
+                        <img src="./123.jpg" alt="고양이"/>
+                    </div>
+                    <p>고양이 좋아</p>
+                </div>
+            <p> 제가 이 사진을 좋아하는 이유는
+                <br />
+                고양이 너무 사랑스럽고 귀여워
+                <br />
+                ㅠㅠ
+            </p>
+            </div>
         </section>
         <hr />
         <section>
-            <hr />
-            <h2>마지막으로 제가 좋아하는 음악입니다</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/kEDgMZgWoAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h2 class="center">마지막으로 제가 좋아하는 음악입니다</h2>
+            <section id="musiccontainer">
+                <section id="musicplayer">
+                    <p id="musictitle">아침달</p>
+                    <p id="artist">nov</p>
+                    <iframe width="400" height="256" src="https://www.youtube.com/embed/kEDgMZgWoAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <p id="lyric">
+                        <span>동이 트기 전 지는 저 달이 서러워</span>
+                        <span>빛은 바랄 수도 없이</span>
+                        <span>어둠 속에 홀로</span>
+                    </p>
+                </section>
+                <p>혹은</p>
+                <section id="streamingservice">
+                    <a href="https://youtu.be/kEDgMZgWoAk"
+                       target="_blank"
+                       rel="noopener noreferrer"
+                    >
+                    <img src="./youtube-music.png" alt="youtube-music logo">
+                    </a>
+                    <p>에서 듣기</p>
+                </section>
+            </section> 
         </section>    
+        <p id="footer">Copyright 2023. ㅎㅎ. All rights reserved</p>
     </main>
 </body>
 </html>
