--- a/instagramPage/index.html
+++ b/instagramPage/index.html
@@ -19,24 +19,24 @@
             <img src="./sky.jpeg" alt="blue sky">
             <div id="userAccount">
                 <div>
-                    <span><b>e6e6fa</b></span>
+                    <span>e6e6fa</span>
                     <button>팔로우</button>
                 </div>
-                <div>
+                <div id="accountCounts">
                     <span>게시물 5</span>
                     <span>팔로워 834</span>
                     <span>팔로우 249</span>
                 </div>
-                <div><b>sora</b></div>
+                <div>sora</div>
             </div>
         </section>
         <hr />
-        <div>
+        <div id="buttons">
             <span>게시물</span>
             <span>릴스</span>
             <span>태그됨</span>
         </div>
-        <div>
+        <div id="imgs">
             <img src="./01.jpeg" alt="naeun1"/>
             <img src="./02.jpeg" alt="naeun2"/>
             <img src="./03.jpeg" alt="totoro"/>
