--- a/instagramPage/index.html
+++ b/instagramPage/index.html
@@ -19,7 +19,7 @@
             <img src="./sky.jpeg" alt="blue sky">
             <div id="userAccount">
                 <div>
-                    <span>e6e6fa</span>
+                    <span id="userId">e6e6fa</span>
                     <button>팔로우</button>
                 </div>
                 <div id="accountCounts">
@@ -27,7 +27,7 @@
                     <span>팔로워 834</span>
                     <span>팔로우 249</span>
                 </div>
-                <div>sora</div>
+                <div id="userName">sora</div>
             </div>
         </section>
         <hr />
