--- a/instagramPage/index.html
+++ b/instagramPage/index.html
@@ -11,6 +11,7 @@
         <section class="headerSummary">
             <img src="./instagram logo.png" alt="instagram logo"/>
             <div class="search">
+                <img src="./magnifier.png" alt="magnifier icon"/>
                 <input type="text" name="search" placeholder="검색">
             </div>
         </section>
