--- a/youtubePage/index.html
+++ b/youtubePage/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <section>
+        <section class="headerSummary">
+          <div class="headerMenuButton">
+            <svg height="24" viewBox="0 0 24 24" width="24" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;"><path d="M21 6H3V5h18v1zm0 5H3v1h18v-1zm0 6H3v1h18v-1z"></path></svg>
+          </div>
           <div class="youtubeLogoSummary">
             <div class="youtubeLogoImg">
               <svg class="externalIcon" viewBox="0 0 90 20" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;">
